# physics_game

./: Cargo.toml  README.md  index.html
Assets/: text.txt
src/: lib.rs  main.rs
